# felice-models

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  objects.inv  pyproject.toml  tox.ini
api/: index.html
api/datasets/: index.html
api/neuron_models/: index.html
api/solver/: index.html
docs-site/: LICENSE  mkdocs.yml
docs-site/docs/: index.md
docs-site/docs/api/: datasets.md  index.md  neuron_models.md  solver.md
docs-site/docs/javascripts/: mathjax.js
docs-site/docs/neuron_models/: index.md
docs-site/docs/neuron_models/fhn/: README.md  fhn.ipynb  (+1 more)
neuron_models/: index.html
neuron_models/fhn/: index.html
neuron_models/fhn/fhn/: index.html
neuron_models/lif/: index.html
neuron_models/snowball/: index.html
neuron_models/wererabbit/: index.html
neuron_models/wererabbit/wererabbit/: index.html
print_page/: index.html
scripts/: wererabbit_stability.ipynb
scripts/networks/: plot.ipynb  test_methods.ipynb  train.py
scripts/networks/results/: task1-2000-boomerang-False  task1-60000-boomerang-False  task1-60000-boomerang-False.eqx
scripts/networks/tmp/: task1-100000-boomerang-False  task1-100000-boomerang-False.eqx  task1-2000-boomerang-False  task1-2000-boomerang-False.eqx  task1-20000-boomerang-False  task1-20000-boomerang-False.eqx
search/: search_index.json
src/felice/: solver.py
src/felice/datasets/: braille.py  reasoning.py
src/felice/networks/: __init__.py  implicit_snn.py  ssm.py  utils.py
src/felice/neuron_models/: __init__.py  boomerang.py  fhn.py  wererabbit.py
stylesheets/: extra.css
(+11 files in other folders)
